# skat-core

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/: release-drafter.yml
.github/workflows/: auto-labeler.yml  build-autocached.yml  build-ninja-autocached.yml  build-ninja.yml  build.yml  daily-build.yml  hosted-ninja-autocache.yml  hosted-ninja-vcpkg_submod.yml  hosted-pure-workflow.yml  hosted-workflow.yml  ninja-build-autocache.yml  ninja-build.yml  ninja-release.yml  release-draft.yml  release-ninja.yml  release.yml
cmake/: bootstrap.cmake  config.cmake  skat-coreConfig.cmake.in
include/foundation/: area_coord.h  visibility.h
include/foundation/bootstrap/: bootstrap.h
include/foundation/type/: traits.h  tuple.h
include/foundation/type/detail/: tuplet.h
source/foundation/: CMakeLists.txt  bootstrap.cpp  entry.cpp
src/: main.cpp
src/foundation/: CMakeLists.txt  entry.cpp
test/test_foundation/: CMakeLists.txt  main.cpp
